--- a/modules/orionode/package.json
+++ b/modules/orionode/package.json
@@ -5,15 +5,15 @@
   "homepage": "http://eclipse.org/orion/",
   "bugs": "https://bugs.eclipse.org/bugs/enter_bug.cgi?product=Orion&component=Node",
   "dependencies": {
-    "connect": "~2.4.6",
-    "node-inspector": "~0.7.4",
-    "socket.io": "~1.0.4",
+    "connect": "2.29.1",
+    "node-inspector": "0.10.0",
+    "socket.io": "1.3.5",
     "deferred-fs": "~0.3.2",
-    "rimraf": "~2.2.6",
-    "term.js": "0.0.3"
+    "rimraf": "2.3.3",
+    "term.js": "0.0.4"
   },
   "optionalDependencies": {
-    "pty.js": "0.2.5"
+    "pty.js": "0.2.7-1"
   },
   "devDependencies": {
     "mocha": "*",
@@ -21,11 +21,11 @@
     "supertest": "*",
     "grunt": "~0.4.5",
     "grunt-cli": "~0.1.13",
-    "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-copy": "~0.8.0",
     "grunt-contrib-requirejs": "~0.4.3",
-    "grunt-string-replace": "~0.2.7",
+    "grunt-string-replace": "~1.2.0",
     "grunt-simple-mocha": "~0.4.0",
-    "grunt-contrib-clean": "~0.5.0"
+    "grunt-contrib-clean": "~0.6.0"
   },
   "engines": {
     "node": ">=0.8.0"
